--- a/retoure-web/src/main/webapp/WEB-INF/web.xml
+++ b/retoure-web/src/main/webapp/WEB-INF/web.xml
@@ -83,7 +83,7 @@
     </filter>
     <filter-mapping>
         <filter-name>Encoding Filter</filter-name>
-        <url-pattern>/*</url-pattern>
+        <servlet-name>Faces Servlet</servlet-name>
     </filter-mapping>
     <!-- Client Filter -->
     <filter>
