--- a/retoure-enterprise/pom.xml
+++ b/retoure-enterprise/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <!--
-        POM.
+        POM
     -->
     <groupId>eu.artofcoding.retoure</groupId>
     <artifactId>retoure-enterprise</artifactId>
@@ -15,15 +15,15 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <!--
-        Project Information.
+        Project Information
     -->
     <name>Retoure Enterprise</name>
     <url>http://www.retourenportal.com</url>
     <!--
-        Build Settings.
+        Build Settings
     -->
     <packaging>ear</packaging>
-    <!-- Properties. -->
+    <!-- Properties -->
     <properties>
     </properties>
     <dependencies>
@@ -36,49 +36,21 @@
             <version>${project.version}</version>
             <type>ejb</type>
         </dependency>
+        <!--
         <dependency>
             <groupId>eu.artofcoding.retoure</groupId>
             <artifactId>retoure-web</artifactId>
             <version>${project.version}</version>
             <type>war</type>
         </dependency>
+        -->
     </dependencies>
     <build>
-        <!--
-             Build Plugins.
-             http://maven.apache.org/plugins/index.html
-         -->
         <plugins>
-            <!-- maven-resources-plugin -->
-            <!--
-            <plugin>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>2.6</version>
-                <executions>
-                    <execution>
-                        <id>copy-resources</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${basedir}/target/extra-resources</outputDirectory>
-                            <resources>
-                                <resource>
-                                    <directory>src/main/resources/glassfish-*.xml</directory>
-                                    <filtering>true</filtering>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            -->
-            <!-- maven-ear-plugin, http://maven.apache.org/plugins/maven-ear-plugin/ -->
+            <!-- maven-ear-plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-ear-plugin</artifactId>
-                <version>${version.org.apache.maven.ear.plugin}</version>
                 <configuration>
                     <applicationName>retoure-enterprise</applicationName>
                     <displayName>Retourenportal</displayName>
@@ -113,6 +85,7 @@
                             <uri>retoure-persistence</uri>
                         </ejbModule>
                         <!-- retoure-web -->
+                        <!--
                         <webModule>
                             <groupId>eu.artofcoding.retoure</groupId>
                             <artifactId>retoure-web</artifactId>
@@ -120,6 +93,7 @@
                             <uri>retoure-web</uri>
                             <unpack>true</unpack>
                         </webModule>
+                        -->
                     </modules>
                     <!-- Security. -->
                     <security>
@@ -134,28 +108,6 @@
                     </security>
                 </configuration>
             </plugin>
-            <!-- buildnumber-maven-plugin -->
-            <!--
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>buildnumber-maven-plugin</artifactId>
-                <version>1.2</version>
-                <configuration>
-                    <format>{0,date,yyyyMMddHHmmss}</format>
-                    <items>
-                        <item>timestamp</item>
-                    </items>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>create</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            -->
         </plugins>
     </build>
 </project>
