--- a/retoure-store-demo/pom.xml
+++ b/retoure-store-demo/pom.xml
@@ -3,23 +3,23 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
+    <modelVersion>4.0.0</modelVersion>
+
+    <artifactId>retoure-store-demo</artifactId>
+
     <parent>
         <artifactId>retoure-server</artifactId>
         <groupId>eu.artofcoding.retoure</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>retoure-persistence</artifactId>
-
     <!--
-        Project Information
+        Project Information.
     -->
-    <name>Retoure Persistence</name>
+    <name>Retoure Store Demo</name>
     <url>http://www.retourenportal.com</url>
 
-    <packaging>ejb</packaging>
+    <packaging>jar</packaging>
 
     <properties>
     </properties>
@@ -34,16 +34,12 @@
             <scope>provided</scope>
         </dependency>
         <!--
-            JPA
+            CDI
         -->
         <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>org.eclipse.persistence.jpa</artifactId>
-        </dependency>
-        <!-- MySQL -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <scope>provided</scope>
         </dependency>
         <!--
             Beetlejuice
@@ -54,7 +50,11 @@
         </dependency>
         <dependency>
             <groupId>eu.artofcoding.beetlejuice</groupId>
-            <artifactId>beetlejuice-persistence</artifactId>
+            <artifactId>beetlejuice-template</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>eu.artofcoding.beetlejuice</groupId>
+            <artifactId>beetlejuice-email</artifactId>
         </dependency>
         <!--
             Retoure
@@ -64,15 +64,16 @@
             <artifactId>retoure-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>eu.artofcoding.retoure</groupId>
+            <artifactId>retoure-persistence</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>eu.artofcoding.retoure</groupId>
+            <artifactId>retoure-dhl-client</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
-
-    <build>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-            </resource>
-        </resources>
-        <finalName>${project.artifactId}-${project.version}</finalName>
-    </build>
 
 </project>
