--- a/retoure-web-aktivshop/pom.xml
+++ b/retoure-web-aktivshop/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>eu.artofcoding.retoure</groupId>
-    <artifactId>retoure-web</artifactId>
+    <artifactId>retoure-web-aktivshop</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <parent>
@@ -18,19 +18,12 @@
     <!--
         Project Information.
     -->
-    <name>Retoure Web</name>
+    <name>Retoure Web Aktivshop</name>
     <url>http://www.retourenportal.com</url>
 
     <packaging>war</packaging>
 
     <properties>
-        <!-- JavaServer Faces -->
-        <version.javax.faces-api>2.1</version.javax.faces-api>
-        <version.org.primefaces>3.4</version.org.primefaces>
-        <version.com.ocpsoft.prettyfaces-jsf2>3.3.3</version.com.ocpsoft.prettyfaces-jsf2>
-        <!-- Apache Commons -->
-        <version.org.apache.commons.io>2.4</version.org.apache.commons.io>
-        <version.org.apache.commons.fileupload>1.2.2</version.org.apache.commons.fileupload>
     </properties>
 
     <dependencies>
@@ -40,67 +33,68 @@
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
-            <version>${version.javaee-api}</version>
             <scope>provided</scope>
         </dependency>
         <!--
-            CDI.
+            CDI
         -->
         <dependency>
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
-            <version>${version.javax.cdi}</version>
             <scope>provided</scope>
         </dependency>
         <!--
-            JavaServer Faces.
+            JavaServer Faces
         -->
         <dependency>
             <groupId>javax.faces</groupId>
             <artifactId>javax.faces-api</artifactId>
-            <version>${version.javax.faces-api}</version>
             <scope>provided</scope>
+        </dependency>
+        <!-- OmniFaces -->
+        <dependency>
+            <groupId>org.omnifaces</groupId>
+            <artifactId>omnifaces</artifactId>
         </dependency>
         <!-- PrettyFaces -->
         <dependency>
             <groupId>com.ocpsoft</groupId>
             <artifactId>prettyfaces-jsf2</artifactId>
-            <version>${version.com.ocpsoft.prettyfaces-jsf2}</version>
         </dependency>
         <!--
-            Beetlejuice.
+            Beetlejuice
         -->
         <dependency>
             <groupId>eu.artofcoding.beetlejuice</groupId>
             <artifactId>beetlejuice-api</artifactId>
-            <version>${version.eu.artofcoding.beetlejuice}</version>
         </dependency>
         <dependency>
             <groupId>eu.artofcoding.beetlejuice</groupId>
             <artifactId>beetlejuice-web</artifactId>
-            <version>${version.eu.artofcoding.beetlejuice}</version>
         </dependency>
         <dependency>
             <groupId>eu.artofcoding.beetlejuice</groupId>
             <artifactId>beetlejuice-web-jsfcomponents</artifactId>
-            <version>${version.eu.artofcoding.beetlejuice}</version>
         </dependency>
         <dependency>
             <groupId>eu.artofcoding.beetlejuice</groupId>
             <artifactId>beetlejuice-template</artifactId>
-            <version>${version.eu.artofcoding.beetlejuice}</version>
         </dependency>
         <dependency>
             <groupId>eu.artofcoding.beetlejuice</groupId>
             <artifactId>beetlejuice-email</artifactId>
-            <version>${version.eu.artofcoding.beetlejuice}</version>
         </dependency>
         <!--
-            Retoure.
+            Retoure
         -->
         <dependency>
             <groupId>eu.artofcoding.retoure</groupId>
             <artifactId>retoure-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>eu.artofcoding.retoure</groupId>
+            <artifactId>retoure-web-helper</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -129,7 +123,6 @@
             <!-- maven-war-plugin -->
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>${version.org.apache.maven.plugins.maven-war-plugin}</version>
                 <configuration>
                     <!-- Java EE 6 doesn't require web.xml, Maven needs to catch up! -->
                     <failOnMissingWebXml>false</failOnMissingWebXml>
@@ -139,10 +132,9 @@
             <plugin>
                 <groupId>org.glassfish.maven.plugin</groupId>
                 <artifactId>maven-glassfish-plugin</artifactId>
-                <version>${version.org.glassfish.maven.plugin.maven-glassfish-plugin}</version>
             </plugin>
         </plugins>
-        <finalName>retoure-web</finalName>
+        <finalName>${project.artifactId}-${project.version}</finalName>
     </build>
 
 </project>
