--- a/retoure-web-demo/pom.xml
+++ b/retoure-web-demo/pom.xml
@@ -32,14 +32,10 @@
             Java EE
         -->
         <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
-            <scope>provided</scope>
-            <!--
             <groupId>org.jboss.spec</groupId>
             <artifactId>jboss-javaee-6.0</artifactId>
             <type>pom</type>
-            -->
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -62,6 +58,11 @@
             <artifactId>javax.faces-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        <!-- OmniFaces -->
+        <dependency>
+            <groupId>org.omnifaces</groupId>
+            <artifactId>omnifaces</artifactId>
+        </dependency>
         <!-- PrettyFaces -->
         <dependency>
             <groupId>com.ocpsoft</groupId>
@@ -80,11 +81,23 @@
         </dependency>
         <dependency>
             <groupId>eu.artofcoding.beetlejuice</groupId>
+            <artifactId>beetlejuice-persistence</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>eu.artofcoding.beetlejuice</groupId>
             <artifactId>beetlejuice-web</artifactId>
         </dependency>
         <dependency>
             <groupId>eu.artofcoding.beetlejuice</groupId>
             <artifactId>beetlejuice-web-jsfcomponents</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>eu.artofcoding.beetlejuice</groupId>
+            <artifactId>beetlejuice-template</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>eu.artofcoding.beetlejuice</groupId>
+            <artifactId>beetlejuice-email</artifactId>
         </dependency>
         <!--
             Retoure
@@ -93,11 +106,13 @@
             <groupId>eu.artofcoding.retoure</groupId>
             <artifactId>retoure-api</artifactId>
             <version>${project.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>eu.artofcoding.retoure</groupId>
             <artifactId>retoure-web-helper</artifactId>
             <version>${project.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>eu.artofcoding.retoure</groupId>
@@ -115,14 +130,117 @@
 
     <build>
         <plugins>
+            <!-- maven-dependency-plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>unpack</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>unpack</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <!-- retoure-api -->
+                                <artifactItem>
+                                    <groupId>eu.artofcoding.retoure</groupId>
+                                    <artifactId>retoure-api</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>jar</type>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>
+                                        ${project.build.directory}/${project.artifactId}-${project.version}/WEB-INF/classes
+                                    </outputDirectory>
+                                    <includes>
+                                        eu/**
+                                    </includes>
+                                </artifactItem>
+                                <!-- retoure-dhl-client -->
+                                <artifactItem>
+                                    <groupId>eu.artofcoding.retoure</groupId>
+                                    <artifactId>retoure-dhl-client</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>jar</type>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>
+                                        ${project.build.directory}/${project.artifactId}-${project.version}/WEB-INF/classes
+                                    </outputDirectory>
+                                    <includes>
+                                        eu/**
+                                    </includes>
+                                </artifactItem>
+                                <!-- retoure-persistence -->
+                                <artifactItem>
+                                    <groupId>eu.artofcoding.retoure</groupId>
+                                    <artifactId>retoure-persistence</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>jar</type>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>
+                                        ${project.build.directory}/${project.artifactId}-${project.version}/WEB-INF/classes
+                                    </outputDirectory>
+                                    <includes>
+                                        META-INF/**,
+                                        eu/**
+                                    </includes>
+                                </artifactItem>
+                                <!-- retoure-store-demo -->
+                                <artifactItem>
+                                    <groupId>eu.artofcoding.retoure</groupId>
+                                    <artifactId>retoure-store-demo</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>jar</type>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>
+                                        ${project.build.directory}/${project.artifactId}-${project.version}/WEB-INF/classes
+                                    </outputDirectory>
+                                    <includes>
+                                        META-INF/**,
+                                        eu/**
+                                    </includes>
+                                </artifactItem>
+                                <!-- retoure-web-helper -->
+                                <artifactItem>
+                                    <groupId>eu.artofcoding.retoure</groupId>
+                                    <artifactId>retoure-web-helper</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>jar</type>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>
+                                        ${project.build.directory}/${project.artifactId}-${project.version}/WEB-INF/classes
+                                    </outputDirectory>
+                                    <includes>
+                                        META-INF/**,
+                                        eu/**
+                                    </includes>
+                                </artifactItem>
+                            </artifactItems>
+                            <!-- This project's META-INF -->
+                            <!--
+                            <includes>META-INF/**</includes>
+                            <outputDirectory>${project.build.directory}/${project.artifactId}-${project.version}/WEB-INF/classes</outputDirectory>
+                            <overWriteReleases>false</overWriteReleases>
+                            -->
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <!-- maven-war-plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>war</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>war</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
-                    <archive>
-                        <addMavenDescriptor>false</addMavenDescriptor>
-                    </archive>
                     <!-- Java EE 6 doesn't require web.xml, Maven needs to catch up! -->
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
