--- a/retoure-web-demo/src/main/webapp/WEB-INF/web.xml
+++ b/retoure-web-demo/src/main/webapp/WEB-INF/web.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">
     <display-name>retoure-web-demo</display-name>
-    <description>Retoure Demo-Web</description>
+    <description>Retoure Demo Web</description>
     <welcome-file-list>
         <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
     <!--
-        Context Parameters.
+        Context Parameters
     -->
     <context-param>
         <param-name>eu.artofcoding.retoure.web.store.STORE_IDENT</param-name>
@@ -19,23 +19,7 @@
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Development</param-value>
     </context-param>
-    <!--
-        PrettyFaces.
     -->
-    <!--
-    <context-param>
-        <param-name>com.ocpsoft.pretty.CONFIG_FILES</param-name>
-        <param-value>/WEB-INF/custom-mappings.xml,/META-INF/another-config.xml</param-value>
-    </context-param>
-    <context-param>
-        <param-name>com.ocpsoft.pretty.DEVELOPMENT</param-name>
-        <param-value>true</param-value>
-    </context-param>
-    -->
-    <context-param>
-        <param-name>javax.faces.FACELETS_RESOURCE_RESOLVER</param-name>
-        <param-value>eu.artofcoding.beetlejuice.web.jsf.FaceletsResourceResolver</param-value>
-    </context-param>
     <!--
         Also add JVM flag -Dorg.apache.el.parser.COERCE_TO_ZERO=false
     -->
@@ -44,12 +28,10 @@
         <param-value>true</param-value>
     </context-param>
     <!--
-        Listeners.
-    -->
-    <!--
-        Filters.
+        Filters
     -->
     <!-- Encoding Filter -->
+    <!--
     <filter>
         <filter-name>Encoding Filter</filter-name>
         <filter-class>eu.artofcoding.beetlejuice.web.EncodingFilter</filter-class>
@@ -58,7 +40,8 @@
         <filter-name>Encoding Filter</filter-name>
         <servlet-name>Faces Servlet</servlet-name>
     </filter-mapping>
-    <!-- Client Filter -->
+    -->
+    <!-- Store Client Filter -->
     <!--
     <filter>
         <filter-name>StoreIdent Filter</filter-name>
@@ -69,8 +52,17 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     -->
+    <!-- Apache MyFaces Tomahawk, http://myfaces.apache.org/tomahawk/extensionsFilter.html -->
+    <filter>
+        <filter-name>extensionsFilter</filter-name>
+        <filter-class>org.apache.myfaces.webapp.filter.ExtensionsFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>extensionsFilter</filter-name>
+        <servlet-name>Faces Servlet</servlet-name>
+    </filter-mapping>
     <!--
-        Servlets.
+        Servlets
     -->
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
@@ -83,6 +75,9 @@
         <url-pattern>*.xhtml</url-pattern>
         <url-pattern>*.faces</url-pattern>
     </servlet-mapping>
+    <!--
+        Session
+    -->
     <session-config>
         <session-timeout>60</session-timeout>
         <cookie-config>
@@ -90,11 +85,11 @@
         </cookie-config>
     </session-config>
     <!--
-        Error Pages.
+        Error Pages
     -->
     <error-page>
         <exception-type>javax.faces.application.ViewExpiredException</exception-type>
-        <location>/view_expired.xhtml</location>
+        <location>/login.xhtml</location>
     </error-page>
     <error-page>
         <exception-type>eu.artofcoding.retoure.api.RetoureRuntimeException</exception-type>
