--- a/pom.xml
+++ b/pom.xml
@@ -223,6 +223,15 @@
     <dependencyManagement>
         <dependencies>
             <!--
+                Code Quality
+            -->
+            <!-- FindBugs -->
+            <dependency>
+                <groupId>net.sourceforge.findbugs</groupId>
+                <artifactId>jsr305</artifactId>
+                <version>1.3.2</version>
+            </dependency>
+            <!--
                 Java EE
             -->
             <!-- GlassFish -->
@@ -253,40 +262,12 @@
             <dependency>
                 <groupId>javax.xml.ws</groupId>
                 <artifactId>jaxws-api</artifactId>
-                <version>2.2.7</version>
+                <version>2.0</version>
             </dependency>
             <dependency>
                 <groupId>com.sun.xml.ws</groupId>
                 <artifactId>jaxws-rt</artifactId>
                 <version>2.2.7</version>
-            </dependency>
-            <!-- Apache Axis -->
-            <dependency>
-                <groupId>org.apache.axis2</groupId>
-                <artifactId>axis2-kernel</artifactId>
-                <version>1.6.2</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.axis2</groupId>
-                <artifactId>axis2-adb</artifactId>
-                <version>1.6.2</version>
-            </dependency>
-            <!-- axis2-transport-local for testing, java.lang.ClassNotFoundException -->
-            <dependency>
-                <groupId>org.apache.axis2</groupId>
-                <artifactId>axis2-transport-local</artifactId>
-                <version>1.6.2</version>
-            </dependency>
-            <!-- axis2-transport-http for testing, java.lang.ClassNotFoundException -->
-            <dependency>
-                <groupId>org.apache.axis2</groupId>
-                <artifactId>axis2-transport-http</artifactId>
-                <version>1.6.2</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.axis2</groupId>
-                <artifactId>axis2-saaj</artifactId>
-                <version>1.6.2</version>
             </dependency>
             <dependency>
                 <groupId>com.sun.xml.messaging.saaj</groupId>
@@ -298,6 +279,16 @@
                 <artifactId>jaxb-xjc</artifactId>
                 <version>2.2.6</version>
             </dependency>
+            <dependency>
+                <groupId>com.sun.xml.ws</groupId>
+                <artifactId>webservices</artifactId>
+                <version>2.1-b15</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.metro</groupId>
+                <artifactId>webservices-osgi</artifactId>
+                <version>2.1</version>
+            </dependency>
             <!--
                 Java Persistence API
             -->
@@ -306,6 +297,7 @@
                 <groupId>org.eclipse.persistence</groupId>
                 <artifactId>org.eclipse.persistence.jpa</artifactId>
                 <version>2.4.1</version>
+                <scope>provided</scope>
             </dependency>
             <!-- MySQL -->
             <dependency>
@@ -320,8 +312,14 @@
             <dependency>
                 <groupId>javax.faces</groupId>
                 <artifactId>javax.faces-api</artifactId>
-                <version>2.2-SNAPSHOT</version>
+                <version>2.1</version>
                 <scope>provided</scope>
+            </dependency>
+            <!-- Apache MyFaces Tomahawk -->
+            <dependency>
+                <groupId>org.apache.myfaces.tomahawk</groupId>
+                <artifactId>tomahawk20</artifactId>
+                <version>1.1.14</version>
             </dependency>
             <!-- OmniFaces -->
             <dependency>
@@ -353,37 +351,50 @@
                 <version>13.0.1</version>
             </dependency>
             <!--
+                PDF
+            -->
+            <dependency>
+                <groupId>org.apache.pdfbox</groupId>
+                <artifactId>pdfbox</artifactId>
+                <version>1.7.1</version>
+            </dependency>
+            <!--
                 Beetlejuice
             -->
             <dependency>
                 <groupId>eu.artofcoding.beetlejuice</groupId>
                 <artifactId>beetlejuice-api</artifactId>
-                <version>1.1.0-SNAPSHOT</version>
+                <version>1.2.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>eu.artofcoding.beetlejuice</groupId>
                 <artifactId>beetlejuice-cdm</artifactId>
-                <version>1.1.0-SNAPSHOT</version>
+                <version>1.2.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>eu.artofcoding.beetlejuice</groupId>
                 <artifactId>beetlejuice-template</artifactId>
-                <version>1.1.0-SNAPSHOT</version>
+                <version>1.2.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>eu.artofcoding.beetlejuice</groupId>
                 <artifactId>beetlejuice-email</artifactId>
-                <version>1.1.0-SNAPSHOT</version>
+                <version>1.2.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>eu.artofcoding.beetlejuice</groupId>
                 <artifactId>beetlejuice-web</artifactId>
-                <version>1.1.0-SNAPSHOT</version>
+                <version>1.2.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>eu.artofcoding.beetlejuice</groupId>
+                <artifactId>beetlejuice-web-security</artifactId>
+                <version>1.2.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>eu.artofcoding.beetlejuice</groupId>
                 <artifactId>beetlejuice-web-jsfcomponents</artifactId>
-                <version>1.1.0-SNAPSHOT</version>
+                <version>1.2.0-SNAPSHOT</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
