--- a/retoure-web-aktivshop/pom.xml
+++ b/retoure-web-aktivshop/pom.xml
@@ -27,6 +27,19 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>net.sourceforge.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+        </dependency>
+        <!--
+            Google
+        -->
+        <!-- Guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <scope>provided</scope>
+        </dependency>
         <!--
             Java EE
         -->
@@ -52,16 +65,28 @@
             <artifactId>javax.faces-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        <!-- Apache MyFaces Tomahawk -->
+        <dependency>
+            <groupId>org.apache.myfaces.tomahawk</groupId>
+            <artifactId>tomahawk20</artifactId>
+            <!-- Will be provided via EAR or WAR
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>jstl</artifactId>
+                </exclusion>
+            </exclusions> -->
+        </dependency>
         <!-- OmniFaces -->
         <dependency>
             <groupId>org.omnifaces</groupId>
             <artifactId>omnifaces</artifactId>
         </dependency>
-        <!-- PrettyFaces -->
+        <!-- PrettyFaces
         <dependency>
             <groupId>com.ocpsoft</groupId>
             <artifactId>prettyfaces-jsf2</artifactId>
-        </dependency>
+        </dependency> -->
         <!--
             Beetlejuice
         -->
@@ -73,14 +98,28 @@
             <groupId>eu.artofcoding.beetlejuice</groupId>
             <artifactId>beetlejuice-cdm</artifactId>
         </dependency>
+        <!--
         <dependency>
             <groupId>eu.artofcoding.beetlejuice</groupId>
             <artifactId>beetlejuice-persistence</artifactId>
-        </dependency>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.hibernate.javax.persistence</groupId>
+                    <artifactId>hibernate-jpa-2.0-api</artifactId>
+                </exclusion>
+            </exclusions>
+            </dependency>
+        -->
         <dependency>
             <groupId>eu.artofcoding.beetlejuice</groupId>
             <artifactId>beetlejuice-web</artifactId>
         </dependency>
+        <!--
+        <dependency>
+            <groupId>eu.artofcoding.beetlejuice</groupId>
+            <artifactId>beetlejuice-web-security</artifactId>
+        </dependency>
+        -->
         <dependency>
             <groupId>eu.artofcoding.beetlejuice</groupId>
             <artifactId>beetlejuice-web-jsfcomponents</artifactId>
@@ -92,6 +131,13 @@
         <dependency>
             <groupId>eu.artofcoding.beetlejuice</groupId>
             <artifactId>beetlejuice-email</artifactId>
+            <!-- Will be provided via EAR or WAR
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.mail</groupId>
+                    <artifactId>javax.mail-api</artifactId>
+                </exclusion>
+            </exclusions> -->
         </dependency>
         <!--
             Retoure
@@ -101,6 +147,17 @@
             <artifactId>retoure-api</artifactId>
             <version>${project.version}</version>
             <scope>provided</scope>
+            <!-- Will be provided via EAR or WAR
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jboss.shrinkwrap</groupId>
+                    <artifactId>shrinkwrap-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.jboss.shrinkwrap.descriptors</groupId>
+                    <artifactId>shrinkwrap-descriptors-impl</artifactId>
+                </exclusion>
+            </exclusions> -->
         </dependency>
         <dependency>
             <groupId>eu.artofcoding.retoure</groupId>
@@ -112,13 +169,18 @@
             <groupId>eu.artofcoding.retoure</groupId>
             <artifactId>retoure-store-aktivshop</artifactId>
             <version>${project.version}</version>
+            <scope>provided</scope>
+            <!-- Will be provided via EAR or WAR
             <exclusions>
-                <!-- Will be provided via EAR or WAR -->
                 <exclusion>
-                    <groupId>eu.artofcoding.retoure</groupId>
-                    <artifactId>retoure-persistence</artifactId>
+                    <groupId>javax.xml</groupId>
+                    <artifactId>jaxrpc-api</artifactId>
                 </exclusion>
-            </exclusions>
+                <exclusion>
+                    <groupId>org.glassfish.metro</groupId>
+                    <artifactId>webservices-osgi</artifactId>
+                </exclusion>
+            </exclusions> -->
         </dependency>
     </dependencies>
 
@@ -131,12 +193,27 @@
                 <executions>
                     <execution>
                         <id>unpack</id>
-                        <phase>package</phase>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>unpack</goal>
                         </goals>
                         <configuration>
                             <artifactItems>
+                                <!-- tomahawk
+                                <artifactItem>
+                                    <groupId>org.apache.myfaces.tomahawk</groupId>
+                                    <artifactId>tomahawk20</artifactId>
+                                    <version>1.1.14</version>
+                                    <type>jar</type>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>
+                                        ${project.build.directory}/${project.artifactId}-${project.version}/WEB-INF/classes
+                                    </outputDirectory>
+                                    <includes>
+                                        META-INF/**,
+                                        org/**
+                                    </includes>
+                                </artifactItem> -->
                                 <!-- retoure-api -->
                                 <artifactItem>
                                     <groupId>eu.artofcoding.retoure</groupId>
@@ -166,6 +243,7 @@
                                     </includes>
                                 </artifactItem>
                                 <!-- retoure-persistence -->
+                                <!--
                                 <artifactItem>
                                     <groupId>eu.artofcoding.retoure</groupId>
                                     <artifactId>retoure-persistence</artifactId>
@@ -180,6 +258,7 @@
                                         eu/**
                                     </includes>
                                 </artifactItem>
+                                -->
                                 <!-- retoure-store-aktivshop -->
                                 <artifactItem>
                                     <groupId>eu.artofcoding.retoure</groupId>
@@ -212,11 +291,77 @@
                                 </artifactItem>
                             </artifactItems>
                             <!-- This project's META-INF -->
-                            <!--
-                            <includes>META-INF/**</includes>
-                            <outputDirectory>${project.build.directory}/${project.artifactId}-${project.version}/WEB-INF/classes</outputDirectory>
+                            <includes>
+                                META-INF/**
+                            </includes>
+                            <outputDirectory>
+                                ${project.build.directory}/${project.artifactId}-${project.version}/WEB-INF/classes
+                            </outputDirectory>
                             <overWriteReleases>false</overWriteReleases>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>copy-deps</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <!--
+                            <useSubDirectoryPerType>true</useSubDirectoryPerType>
+                            <excludeTransitive>true</excludeTransitive>
+                            <includeScope>compile</includeScope>
+                            <excludeScope>provided,test</excludeScope>
                             -->
+                            <includeGroupIds>
+                                org.apache.myfaces.tomahawk,
+                                org.apache.pdfbox,
+                                org.omnifaces,
+                                com.ocpsoft,
+                                com.google.guava,
+                                eu.artofcoding.beetlejuice
+                            </includeGroupIds>
+                            <!--
+                                Included in WEB-INF/classes
+                            -->
+                            <excludeGroupIds>
+                                <!--
+                                javax.enterprise,
+                                javax.faces,
+                                javax.validation,
+                                javax.el,
+                                javax.jws,
+                                javax.annotation,
+                                javax.xml,
+                                org.jboss.spec,
+                                org.jboss.arquillian.core,
+                                org.jboss.arquillian.config,
+                                org.jboss.arquillian.testng,
+                                org.jboss.arquillian.container,
+                                org.jboss.arquillian.extension,
+                                org.jboss.shrinkwrap,
+                                org.seleniumhq.selenium,
+                                org.glassfish.main.extras,
+                                org.glassfish.metro,
+                                org.jvnet,
+                                org.testng,
+                                junit,
+                                com.sun.xml.bind,
+                                com.ctc.wstx,
+                                xalan,
+                                -->
+                                org.hibernate.javax.persistence,
+                                eu.artofcoding.retoure
+                            </excludeGroupIds>
+                            <!-- Absent code attribute... -->
+                            <excludeArtifactIds>
+                                shrinkwrap-impl-base,
+                                shrinkwrap-api
+                                retoure-store-aktivshop,
+                            </excludeArtifactIds>
+                            <outputDirectory>
+                                ${project.build.directory}/${project.artifactId}-${project.version}/WEB-INF/lib
+                            </outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
@@ -237,6 +382,11 @@
                 <configuration>
                     <!-- Java EE 6 doesn't require web.xml, Maven needs to catch up! -->
                     <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                        </manifest>
+                    </archive>
                 </configuration>
             </plugin>
             <!-- maven-glassfish-plugin -->
