--- a/retoure-web-aktivshop/src/main/webapp/WEB-INF/web.xml
+++ b/retoure-web-aktivshop/src/main/webapp/WEB-INF/web.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">
-    <display-name>retoure-web</display-name>
-    <description>Retoure Web</description>
+    <display-name>retoure-web-aktivshop</display-name>
+    <description>Retoure Web Aktivshop</description>
     <welcome-file-list>
         <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
     <!--
-        Context Parameters.
+        Context Parameters
     -->
     <context-param>
         <param-name>eu.artofcoding.retoure.web.store.STORE_IDENT</param-name>
@@ -20,23 +20,6 @@
         <param-value>Development</param-value>
     </context-param>
     <!--
-        PrettyFaces.
-    -->
-    <!--
-    <context-param>
-        <param-name>com.ocpsoft.pretty.CONFIG_FILES</param-name>
-        <param-value>/WEB-INF/custom-mappings.xml,/META-INF/another-config.xml</param-value>
-    </context-param>
-    <context-param>
-        <param-name>com.ocpsoft.pretty.DEVELOPMENT</param-name>
-        <param-value>true</param-value>
-    </context-param>
-    -->
-    <context-param>
-        <param-name>javax.faces.FACELETS_RESOURCE_RESOLVER</param-name>
-        <param-value>eu.artofcoding.beetlejuice.web.jsf.FaceletsResourceResolver</param-value>
-    </context-param>
-    <!--
         Also add JVM flag -Dorg.apache.el.parser.COERCE_TO_ZERO=false
     -->
     <context-param>
@@ -44,9 +27,10 @@
         <param-value>true</param-value>
     </context-param>
     <!--
-        Filters.
+        Filters
     -->
     <!-- Encoding Filter -->
+    <!--
     <filter>
         <filter-name>Encoding Filter</filter-name>
         <filter-class>eu.artofcoding.beetlejuice.web.EncodingFilter</filter-class>
@@ -55,29 +39,18 @@
         <filter-name>Encoding Filter</filter-name>
         <servlet-name>Faces Servlet</servlet-name>
     </filter-mapping>
-    <!-- Client Filter -->
-    <!--
-    <filter>
-        <filter-name>StoreIdent Filter</filter-name>
-        <filter-class>eu.artofcoding.retoure.web.StoreIdentFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>StoreIdent Filter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
     -->
-    <!-- Apache MyFaces
+    <!-- Apache MyFaces Tomahawk, http://myfaces.apache.org/tomahawk/extensionsFilter.html -->
     <filter>
-        <filter-name>Extensions Filter</filter-name>
+        <filter-name>extensionsFilter</filter-name>
         <filter-class>org.apache.myfaces.webapp.filter.ExtensionsFilter</filter-class>
     </filter>
     <filter-mapping>
-        <filter-name>Extensions Filter</filter-name>
+        <filter-name>extensionsFilter</filter-name>
         <servlet-name>Faces Servlet</servlet-name>
     </filter-mapping>
-    -->
     <!--
-        Servlets.
+        Servlets
     -->
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
@@ -90,6 +63,9 @@
         <url-pattern>*.xhtml</url-pattern>
         <url-pattern>*.faces</url-pattern>
     </servlet-mapping>
+    <!--
+        Session
+    -->
     <session-config>
         <session-timeout>60</session-timeout>
         <cookie-config>
@@ -97,11 +73,11 @@
         </cookie-config>
     </session-config>
     <!--
-        Error Pages.
+        Error Pages
     -->
     <error-page>
         <exception-type>javax.faces.application.ViewExpiredException</exception-type>
-        <location>/view_expired.xhtml</location>
+        <location>/login.xhtml</location>
     </error-page>
     <error-page>
         <exception-type>eu.artofcoding.retoure.api.RetoureRuntimeException</exception-type>
